--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,27 @@
         android:theme="@style/Theme.Quiz"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".Activities.Solution"
+            android:exported="false"
+            android:label="Solution"/>
+        <activity
+            android:name=".Activities.Result"
+            android:exported="false"
+            android:label="Results"/>
+        <activity
+            android:name=".Activities.Welcome"
+            android:exported="true"
+            android:noHistory="true"
+            android:theme="@style/MyStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
